fix overflow and height

--- a/src/blocks/page/page.sass
+++ b/src/blocks/page/page.sass
@@ -27,7 +27,8 @@
   .page__chart
     height: 100%
 
-  //.page__order-history
+  .page__order-history
+    height: 250px
 
   .page__right
     max-width: 540px
